style.css
/* ... */
ul {
  list-style: none;
}

img {
  max-width: 100%;
}

#head {
  background-color: #ffffff;
  width: 100%;
}

.hero_section {
  width: 100%;
  height: 100%;
  color: #000000;
  display: flex;
  flex-direction: column;
}

header {
  width: 100%;
  height: auto;
  margin: auto;
  padding: 0 40px;
  display: flex;
  justify-content: space-between;
  align-items: center;
  position: relative;
  z-index: 1;
  flex-wrap: nowrap;
  background-color: var(--light-blue-color);
}

.brand {
  display: flex;
  align-items: center;
  cursor: pointer;
  z-index: 1;
}

nav {
  display: flex;
  align-items: center;
}

.menu {
  display: flex;
  transition: 0.3s;
}

.menu li {
  display: flex;
  justify-content: center;
  font-size: 18px;
  transition: 0.3s;
}

.menu li a {
  text-decoration: none;
  min-width: 150px;
  padding: 40px 40px;
  color: #000000;
  text-align: center;
  transition: 0.3s;
}

.menu li a:hover {
  box-shadow:
    0 -5px 0px black inset,
    500px 0 0 rgba(255, 255, 255, 0.1) inset;
}

/* .menu_bars {
    display: none;
} */

.hamburger {
  position: relative;
  width: 30px;
  height: 4px;
  background: black;
  border-radius: 10px;
  z-index: 2;
  transition: 0.3s;
}
.hamburger:before,
.hamburger:after {
  content: "";
  position: absolute;
  height: 4px;
  right: 0;
  background: black;
  border-radius: 10px;
  transition: 0.3s;
}

.hamburger:before {
  top: -10px;
  width: 20px;
}

.hamburger:after {
  top: 10px;
  width: 25px;
}

.toggle_menu {
  position: absolute;
  cursor: pointer;
  width: 30px;
  height: 100%;
  opacity: 0;
  z-index: 3;
}

.hamburger,
.toggle_menu {
  display: none;
}

nav input:checked ~ .hamburger {
  background: transparent;
}

nav input:checked ~ .hamburger:before {
  top: 0;
  width: 30px;
  transform: rotate(-45deg);
}

nav input:checked ~ .hamburger:after {
  top: 0;
  width: 30px;
  transform: rotate(45deg);
}

nav input:checked ~ .menu {
  right: 0;
}

@media screen and (max-width: 1000px) {
  .hamburger,
  .toggle_menu {
    display: block;
  }

  header {
    height: 94px;
  }

  .menu {
    justify-content: start;
    flex-direction: column;
    align-items: center;
    position: fixed;
    top: 0;
    right: -300px;
    background: var(--light-blue-color);
    width: 300px;
    height: 100%;
    padding-top: 94px;
  }

  .menu li {
    width: 100%;
  }
  .menu li a {
    font-size: 2rem;
    padding: 40px 40px;
    width: 100%;
  }
}

.hero_container {
  position: relative;
  z-index: 0;
  width: 80%;
  height: auto;
  display: flex;
  justify-content: space-between;
  margin: 0 auto;
}

.hero_text {
  flex-basis: 45%;
  margin-top: 4rem;
}

.hero_image {
  flex-basis: 50%;
  margin-top: 4rem;
}

.hero_image img {
  width: 100%;
  height: 100%;
  justify-self: flex-start;
  object-fit: cover;
  border: none;
  border-radius: 30px;
}

h1 {
  font-family: "fira-sans", sans-serif;
  font-size: 54px;
  font-weight: 700;
  font-style: normal;
}

h2 {
  font-size: 30px;
}

.hero_string {
  margin-top: 60px;
  margin-bottom: 60px;
  color: rgb(0, 0, 0);
  font-size: 2rem;
}

.hero_btn,
.hero_btn2 {
  border-radius: 10px;
  font-size: 2rem;
  padding: 20px 30px;
  font-style: bold;
  cursor: pointer;
  transition: all.5 ease;
  border: none;
}

.hero_btn {
  background: var(--dark-blue-color);
  color: white;
  margin-right: 30px;
  margin-bottom: 20px;
  border: 4px solid var(--dark-blue-color);
  transition:
    background 0.3s ease,
    transform 0.3s ease,
    color 0.2s ease;
}

.hero_btn:hover {
  background: transparent;
  color: var(--dark-blue-color);
  transform: scale(1.02);
}

.hero_btn2 {
  background: transparent;
  border: 4px solid var(--orange-color);
  color: var(--orange-color);
  transition:
    background 0.3s ease,
    transform 0.3s ease,
    color 0.2s ease;
}

.hero_btn2:hover {
  background: var(--orange-color);
  color: white;
  transform: scale(1.02);
}

.stats_section {
  height: 100vh;
  width: 100%;
  background-color: var(--dark-blue-color);
  padding: 80px 0px;
  justify-items: center;
}

.stats_container {
  width: 80%;
  height: auto;
  display: flex;
  flex-direction: row;
  justify-content: space-between;
  align-content: center;
}

.stats_module {
  width: 30%;
  min-width: 200px;
  height: auto;
  background-color: white;
  padding: 40px;
  border-radius: 80px;
}

.stats_module_num {
  display: flex;
  width: 100%;
  aspect-ratio: 1/1;
  border-radius: 50%;
  align-items: center;
  justify-content: center;
  background-image: radial-gradient(
    closest-side,
    var(--orange-color) 80%,
    transparent
  );
  color: white;
}

.stats_module_num h1 {
  font-size: 7rem;
}

.stats_text {
  margin-top: 3rem;
  display: flex;
  flex-direction: column;
  align-items: center;
  width: 80%;
}

.stats_text p {
  font-size: 3rem;
  color: white;
  text-align: center;
}

.stats_text img {
  margin-top: 40px;
  width: 250px;
}

@media screen and (max-width: 1500px) {
  .stats_module_num h1 {
    font-size: 4rem;
  }
}

.stats_module_text {
  justify-items: center;
  margin-top: 30px;
  text-align: center;
  font-size: 2rem;
}

@media screen and (max-width: 1300px) {
  .hero_image {
    display: none;
  }

  .hero_section {
    height: fit-content;
    padding-bottom: 40px;
  }
  .hero_text {
    flex-basis: 100%;
  }
}

@media screen and (max-width: 1000px) {
  .stats_container {
    flex-direction: column;
    align-items: center;
    gap: 80px;
  }

  .stats_module {
    width: 80%;
  }

  .stats_section {
    height: fit-content;
  }

  .stats_module_num h1 {
    font-size: 8rem;
  }
}

@media screen and (max-width: 700px) {
  .stats_module_num h1 {
    font-size: 6rem;
  }
}

@media screen and (max-width: 500px) {
  .stats_module_num h1 {
    font-size: 4rem;
  }

  .hero_btn {
    margin-right: 0;
  }
}

/*Volunteer Page*/

.vol_container {
  width: 100%;
  height: auto;
}
/* ... */

